--- a/SUFuji16E195.plist
+++ b/SUFuji16E195.plist
@@ -70,6 +70,11 @@
 	</dict>
 	<key>projects</key>
 	<dict>
+		<key>CarbonHeaders</key>
+		<dict>
+			<key>version</key>
+			<string>18.1</string>
+		</dict>
 		<key>CoreOSMakefiles</key>
 		<dict>
 			<key>version</key>
