--- a/SUFuji16E195.plist
+++ b/SUFuji16E195.plist
@@ -615,10 +615,20 @@
 			<key>version</key>
 			<string>268</string>
 		</dict>
+		<key>autoconf</key>
+		<dict>
+			<key>version</key>
+			<string>2.69</string>
+		</dict>
 		<key>autofs</key>
 		<dict>
 			<key>version</key>
 			<string>259.30.2</string>
+		</dict>
+		<key>automake</key>
+		<dict>
+			<key>version</key>
+			<string>1.15.1</string>
 		</dict>
 		<key>awk</key>
 		<dict>
@@ -816,6 +826,11 @@
 		<dict>
 			<key>version</key>
 			<string>21</string>
+		</dict>
+		<key>gnulibtool</key>
+		<dict>
+			<key>version</key>
+			<string>2.4.6</string>
 		</dict>
 		<key>gnuserv</key>
 		<dict>
