Add jdk8u_bootstrap project
This project contains a prebuilt version of the OpenJDK.
It is included because OpenJDK requires a version of itself
already installed to bootstrap the compiler and standard
libraries.

--- a/SUFuji16E195.plist
+++ b/SUFuji16E195.plist
@@ -891,6 +891,11 @@
 				</array>
 			</dict>
 		</dict>
+		<key>jdk8u_bootstrap</key>
+		<dict>
+			<key>version</key>
+			<string>8.141.15</string>
+		</dict>
 		<key>kext_tools</key>
 		<dict>
 			<key>version</key>
