Add kext projects to boot group
This ensures that they will be processed by darwinmaster.

--- a/Lobo17A365.plist
+++ b/Lobo17A365.plist
@@ -66,6 +66,7 @@
 		<key>boot</key>
 		<array>
 			<string>xnu AppleI386GenericPlatform corecrypto booter</string>
+			<string>IOATAFamily AppleIntelPIIXATA</string>
 		</array>
 	</dict>
 
