Add CoreFoundation project to plist
Note that I renamed the project from CF to CoreFoundation.
I did this so that my changes won't conflict with CFLite as
released on opensource.apple.com, because a full PureDarwin
CoreFoundation will require much more code than what Apple
CFLite includes.

Note that CoreFoundation does not build yet.

--- a/Lobo17A365.plist
+++ b/Lobo17A365.plist
@@ -127,10 +127,18 @@
 			<key>github</key>
 			<string>Andromeda-OS/CarbonHeaders</string>
 		</dict>
-		<key>CF</key>
+		<key>CoreFoundation</key>
 		<dict>
 			<key>version</key>
-			<string>1443.13</string>
+			<string>1158.13</string>
+			<key>dependencies</key>
+			<dict>
+				<key>header</key>
+				<array>
+					<string>libdispatch</string>
+					<string>liblaunch</string>
+				</array>
+			</dict>
 		</dict>
 		<key>CPAN</key>
 		<dict>
