--- a/Lobo17A365.plist
+++ b/Lobo17A365.plist
@@ -722,6 +722,13 @@
 			<key>version</key>
 			<string>317</string>
 		</dict>
+		<key>jpeglib</key>
+		<dict>
+			<key>version</key>
+			<string>9.2</string>
+			<key>github</key>
+			<string>Andromeda-OS/jpeglib</string>
+		</dict>
 		<key>kext_tools</key>
 		<dict>
 			<key>version</key>
